UI adjustments by Philipp's comments.

--- a/top-multi.html
+++ b/top-multi.html
@@ -410,48 +410,48 @@
               <div class="top-offer-item">
                 <a href="https://www.amazon.com" target="_blank" class="offer-store">
                   Amazon
+                  <span class="offer-price">$1,999.99</span>
                 </a>
-                <div class="offer-price">$1,999.99</div>
                 <a href="https://www.amazon.com" target="_blank" class="button-see-offer">See it</a>
               </div>
               <div class="top-offer-item">
                 <a href="https://www.walmart.com" target="_blank" class="offer-store">
                   <img src="./assets/images/icon_walmart-com.png" alt="Walmart">
                   Walmart
+                  <span class="offer-price">$2,200.00</span>
                 </a>
-                <div class="offer-price">$2,200.00</div>
                 <a href="https://www.walmart.com" target="_blank" class="button-see-offer">See it</a>
               </div>
               <div class="top-offer-item">
                 <a href="https://www.ebay.com" target="_blank" class="offer-store">
                   <img src="./assets/images/icon_ebay-com.png" alt="Ebay">
                   Ebay
+                  <span class="offer-price">$2,222.00</span>
                 </a>
-                <div class="offer-price">$2,222.00</div>
                 <a href="https://www.ebay.com" target="_blank" class="button-see-offer">See it</a>
               </div>
               <div class="top-offer-item">
                 <a href="https://www.newegg.com" target="_blank" class="offer-store">
                   <img src="./assets/images/icon_newegg-com.png" alt="Newegg">
                   Newegg
+                  <span class="offer-price">$2,500.50</span>
                 </a>
-                <div class="offer-price">$2,500.50</div>
                 <a href="https://www.newegg.com" target="_blank" class="button-see-offer">See it</a>
               </div>
               <div class="top-offer-item">
                 <a href="https://www.aliexpress.com" target="_blank" class="offer-store">
                   <img src="./assets/images/icon_aliexpress-com.png" alt="AliExpress">
                   AliExpress
+                  <span class="offer-price out-stock">Out of stock</span>
                 </a>
-                <div class="offer-price out-stock">Out of stock</div>
                 <a href="https://www.aliexpress.com" target="_blank" class="button-see-offer">See it</a>
               </div>
               <div class="top-offer-item">
                 <a href="https://www.bestbuy.com" target="_blank" class="offer-store">
                   <img src="./assets/images/icon_bestbuy-com.png" alt="BestBuy">
                   BestBuy
+                  <span class="offer-price"> </span>
                 </a>
-                <div class="offer-price"> </div>
                 <a href="https://www.bestbuy.com" target="_blank" class="button-see-offer">See it</a>
               </div>
             </div>
@@ -569,24 +569,24 @@
               <div class="top-offer-item">
                 <a href="https://www.amazon.com" target="_blank" class="offer-store">
                   Amazon
+                  <span class="offer-price">$888.99</span>
                 </a>
-                <div class="offer-price">$888.99</div>
                 <a href="https://www.amazon.com" target="_blank" class="button-see-offer">See it</a>
               </div>
               <div class="top-offer-item">
                 <a href="https://www.walmart.com" target="_blank" class="offer-store">
                   <img src="./assets/images/icon_walmart-com.png" alt="Walmart">
                   Walmart
+                  <span class="offer-price">$900.00</span>
                 </a>
-                <div class="offer-price">$900.00</div>
                 <a href="https://www.walmart.com" target="_blank" class="button-see-offer">See it</a>
               </div>
               <div class="top-offer-item">
                 <a href="https://www.ebay.com" target="_blank" class="offer-store">
                   <img src="./assets/images/icon_ebay-com.png" alt="Ebay">
                   Ebay
+                  <span class="offer-price">$1,111.00</span>
                 </a>
-                <div class="offer-price">$1,111.00</div>
                 <a href="https://www.ebay.com" target="_blank" class="button-see-offer">See it</a>
               </div>
             </div>
