--- a/versus-1.html
+++ b/versus-1.html
@@ -457,16 +457,16 @@
             <div class="top-offer-item">
               <a href="https://www.amazon.com" target="_blank" class="offer-store">
                 Amazon
+                <span class="offer-price">$1,000.00</span>
               </a>
-              <div class="offer-price">$1,000.00</div>
               <a href="https://www.amazon.com" target="_blank" class="button-see-offer">See it</a>
             </div>
             <div class="top-offer-item">
               <a href="https://www.walmart.com" target="_blank" class="offer-store">
                 <img src="./assets/images/icon_walmart-com.png" alt="Walmart">
                 Walmart
+                <span class="offer-price">$1,100.00</span>
               </a>
-              <div class="offer-price">$1,100.00</div>
               <a href="https://www.walmart.com" target="_blank" class="button-see-offer">See it</a>
             </div>
           </div>
@@ -488,24 +488,24 @@
             <div class="top-offer-item">
               <a href="https://www.amazon.com" target="_blank" class="offer-store">
                 Amazon
+                <span class="offer-price">$920.00</span>
               </a>
-              <div class="offer-price">$920.00</div>
               <a href="https://www.amazon.com" target="_blank" class="button-see-offer">See it</a>
             </div>
             <div class="top-offer-item">
               <a href="https://www.walmart.com" target="_blank" class="offer-store">
                 <img src="./assets/images/icon_walmart-com.png" alt="Walmart">
                 Walmart
+                <span class="offer-price">$950.50</span>
               </a>
-              <div class="offer-price">$950.50</div>
               <a href="https://www.walmart.com" target="_blank" class="button-see-offer">See it</a>
             </div>
             <div class="top-offer-item">
               <a href="https://www.ebay.com" target="_blank" class="offer-store">
                 <img src="./assets/images/icon_ebay-com.png" alt="Ebay">
                 Ebay
+                <span class="offer-price">$955.00</span>
               </a>
-              <div class="offer-price">$955.00</div>
               <a href="https://www.ebay.com" target="_blank" class="button-see-offer">See it</a>
             </div>
           </div>
