Add Autocomplete element on Affiliate Search page.

--- a/affiliate-search.html
+++ b/affiliate-search.html
@@ -16,7 +16,27 @@
       <h2 class="heading">Search Best Deal</h2>
       <div class="sub-heading">Direct search for best deal in all popular shops at once.</div>
       <div class="search-box">
-        <label><input type="text" placeholder="Search Products..." class="search-input"></label>
+        <label>
+          <input type="text" placeholder="Search Products..." class="search-input">
+          <span class="autocomplete-container">
+            <span class="autocomplete-item">
+              <span class="searched-category">Awesome Products</span>
+              Awesome Product
+            </span>
+            <span class="autocomplete-item">
+              <span class="searched-category">Best Products</span>
+              Cool Product
+            </span>
+            <span class="autocomplete-item">
+              <span class="searched-category">Category Name</span>
+              Product Name
+            </span>
+            <span class="autocomplete-item">
+              <span class="searched-category">High Tech</span>
+              Jet Pack
+            </span>
+          </span>
+        </label>
         <button type="button" class="search-button">Search</button>
       </div>
     </div>
