Add Autocomplete element on Home page.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,27 @@
         <h2 class="heading">Search and Compare</h2>
         <div class="slogan">Read our reviews and find the best product!</div>
         <div class="search-box">
-          <label><input type="text" placeholder="Find the best product" class="search-input"></label>
+          <label>
+            <input type="text" placeholder="Find the best product" class="search-input">
+            <span class="autocomplete-container">
+              <span class="autocomplete-item">
+                <span class="searched-category">Awesome Products</span>
+                Awesome Product
+              </span>
+              <span class="autocomplete-item">
+                <span class="searched-category">Best Products</span>
+                Cool Product
+              </span>
+              <span class="autocomplete-item">
+                <span class="searched-category">Category Name</span>
+                Product Name
+              </span>
+              <span class="autocomplete-item">
+                <span class="searched-category">High Tech</span>
+                Jet Pack
+              </span>
+            </span>
+          </label>
           <button type="button" class="search-button">Search</button>
         </div>
         <div class="alternative">
